services/base/karakeep/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: karakeep
  namespace: karakeep
spec:
  type: ClusterIP
  selector:
    app: karakeep
  ports:
    - port: 3000
      targetPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: meilisearch
  namespace: karakeep
spec:
  type: ClusterIP
  selector:
    app: meilisearch
  ports:
    - port: 7700
      targetPort: 7700

---

apiVersion: v1
kind: Service
metadata:
  name: chrome
  namespace: karakeep
spec:
  type: ClusterIP
  selector:
    app: chrome
  ports:
    - port: 9222
      targetPort: 9222
